fixed z-index in high-contrast mode

--- a/bike-store/app/styles/gallery.css
+++ b/bike-store/app/styles/gallery.css
@@ -102,6 +102,7 @@
 
 .high-contrast .gallery img:hover {
     transform: scale(1.2);
+    z-index: 3;
 }
 
 /* ==================*/
